Ensure figcaptions aren’t hidden by figures
A crude way of ensuring that figcaptions are never covered by images/videos with a slightly-off padding-top value that’s necessary for lazy loading. At the moment it relies on b-lazy’s addition of b-error to the main figure element, which means the figure has been loaded and the padding-top value can be overriden. Not the best way of doing it, but works for now.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -83,6 +83,18 @@ img.b-loaded {
   opacity: 1;
   transition: opacity 0.2s ease-out;
 }
+
+/* Crude way to ensure figcaptions aren't hidden by removing the calculated padding once loaded by b-lazy */
+article figure.b-lazy.b-error {
+  padding-top: 0px !important;
+}
+article figure.b-lazy.b-error img.b-lazy {
+  position: initial;
+}
+
+
+
+
 /*
 article img.b-loaded {
   height: auto;
